Enhance mobile menu functionality by adding prevent-scroll class to page container during menu open/close actions; introduce CSS styles for prevent-scroll to manage overflow and height, improving user experience on mobile devices.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,12 @@ p {
 .page-container {
   padding-top: 66px;
 }
+
+.prevent-scroll {
+  height: 100vh;
+  overflow-y: hidden;
+}
+
 /* responsive header */
 @media (min-width: 1280px) {
   #open-mobile-menu-button {
